--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "concurrently": "^3.1.0",
     "css-loader": "^0.26.1",
+    "json-loader": "^0.5.4",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
